Show processing progress, get "/output" video or E404
