# controllers/mainController.js
@@ -11,17 +11,11 @@ exports.main = (req, res) => res.render('main', {});
 exports.project = (req, res) => res.render('project', {});
 
 exports.finished = (req, res) => {
-
-	fs.access(path.join(config.projectPath, req.params.projectID, 'processing'), fs.constants.R_OK, (err) => {
+	const outputFile = path.resolve(path.join(config.projectPath, req.params.projectID, 'output.mp4'));
+	fs.access(outputFile, fs.constants.R_OK, (err) => {
 		if (err) {
-			const outputFile = path.resolve(path.join(config.projectPath, req.params.projectID, 'output.mp4'));
-			fs.access(outputFile, fs.constants.R_OK, (err) => {
-				if (err) {
-					res.sendStatus(404);
-				}
-				else res.sendFile(outputFile);
-			});
+			res.sendStatus(404);
 		}
-		else res.render('finished', {});
+		else res.sendFile(outputFile);
 	});
 };
