# docs/API.yaml
@@ -48,6 +48,16 @@ paths:
           required: true
           schema:
             type: string
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              properties:
+                fields:
+                  type: array
+                  items:
+                    type: string
+                  description: optionally specify which field want to recieve
       responses:
         '200':
           description: Project loaded.
@@ -69,6 +79,10 @@ paths:
                     type: object
                     description: >-
                       object containing arrays {audio: array, video: array}, item of arrays has following structure: {id: string, items: array}
+                  processing:
+                    type: number
+                    nullable: true
+                    description: percentage progress when processing final video, null any other time
         '404':
           description: Project not found.
           content:
